@@ -7,6 +7,7 @@
 	* test_main.c: Test harness for zebra, currently just to test the
 	  RIB.
 	* Makefile.am: Build testzebra using above.
+	* debug.{c,h}: Add 'debug zebra rib' and 'debug zebra rib queue'.
 
 2006-07-02 Paul Jakma <paul.jakma@sun.com>
 
